...
    
    private let bar = UINavigationBar()
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        
        let navigationItem = UINavigationItem(title: "Log Game")
        navigationItem.leftBarButtonItem = cancelButton

        bar.setItems([navigationItem], animated: false)
        self.addSubview(bar)
        
        self.addSubview(tableView)
...
